# distributed-cloud-disk

./: README.md
gateway-service/: config.py  main.py  pyproject.toml  settings.toml
gateway-service/endpoints/: gateway.py
gateway-service/inbox/: models.py  repo.py
gateway-service/kafka/: models.py  (+1 more)
metadata-service/: config.py  main.py  pyproject.toml  settings.toml
minio-controller/: config.py  main.py  pyproject.toml  settings.toml
minio-controller/endpoints/: http_errors.py  minio.py
minio-controller/kafka/: models.py
minio-controller/kafka/consumers/: user_events.py
minio-controller/models/: models.py
minio-controller/outbox/: facade.py  service.py
minio-controller/repositories/: minio_client.py
minio-controller/utils/: crypto_utils.py
storage-service/: config.py  main.py  pyproject.toml  settings.toml
user-service/: config.py  main.py  pyproject.toml  settings.toml
user-service/endpoints/: handshake.py  user.py
user-service/inbox/: service.py
user-service/kafka/: deadletter_publisher.py  dlq_models.py  kafka_client.py  models.py
user-service/kafka/producers/: user_events.py
user-service/middlewares/: gateway_signature_middleware.py  rate_limit_middleware.py  session_middleware.py
user-service/models/: models.py
user-service/outbox/: facade.py  repo.py
user-service/repositories/: etcd_client.py  kafka_client.py  mongo_client.py  redis_store.py
user-service/services/: audit_service.py  handshake_service.py  registry_service.py  session_service.py  temp_hs_service.py
user-service/utils/: circuit_breaker.py  pwd_hasher.py
(+64 files in other folders)
