[project]
name = "minio-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "cryptography>=46.0.3",
    "lihil>=0.2.34",
    "minio-async>=1.0.1",
    "premier>=0.4.10",
    "pydantic>=2.12.4",
    "redis>=7.0.1",
    "uvicorn>=0.38.0",
]
